--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ MANIFEST
 *.manifest
 *.spec
 
+# Ignore logs and plugins from Airflow
+logs
+plugins
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
@@ -158,3 +162,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+/data
+/db_data
+/minio_data
