--- a/docker/fast_api/Dockerfile
+++ b/docker/fast_api/Dockerfile
@@ -1,4 +1,4 @@
 FROM python:3.10-slim-buster
 # Install python packages
 COPY ./requirements.txt /tmp/requirements.txt
-RUN pip install -r /tmp/requirements.txt
+RUN pip install -r requirements.txt
