--- a/docker/fast_api/Dockerfile
+++ b/docker/fast_api/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9
+FROM python:3.10.14-alpine3.19
 # Install python packages
 COPY ./requirements.txt /tmp/requirements.txt
 RUN pip install -r requirements.txt
